# rust-dpdk-net

./: CMakeLists.txt  Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: CI-arm.yml  CI.yml
cmake/: dpdk_configure.cmake  dpdk_deb.cmake
cmake/pkg/: control  control.in  dpdk-net.conf  dpdk-net.conf.in  dpdk-net.sh  dpdk-net.sh.in
docs/: Architecture.md  Internals.md  Limitations.md
docs/Bench/: Bench-2Cpu.md  Benchmark.md
docs/Bench/Azure/: BENCHMARK_d2s.md  BENCHMARK_d4s.md  BENCHMARK_d8s.md
docs/Design/: App.md  Axum.md  Bindings.md  Client.md  Future.md  LcoreAPI.md  OsThreadBridge.md  QuinnDpdk.md  Tonic.md
docs/References/: OtherProjects.md
docs/bugs/: bnd-winmd-array-param-decay.md  bnd-winmd-constant-extraction.md  bnd-winmd-function-ptr-indirection.md  bnd-winmd-void-ptr-const.md  duplicate-types-across-partitions.md  windows-bindgen-extern-system.md
dpdk-net/: Cargo.toml
dpdk-net-axum/: Cargo.toml
dpdk-net-axum/src/: app.rs  context.rs  lib.rs  serve.rs
dpdk-net-axum/tests/: app_echo_test.rs  axum_client_test.rs
dpdk-net-hyper/: Cargo.toml
dpdk-net-hyper/src/: client.rs  connect.rs  connection.rs  error.rs  lib.rs  pool.rs
dpdk-net-quinn/: Cargo.toml
dpdk-net-quinn/src/: lib.rs  runtime.rs  socket.rs
dpdk-net-sys/: Cargo.toml  README.md  build.rs
dpdk-net-sys-gen/: Cargo.toml  bnd-winmd.toml  dpdk.winmd
dpdk-net-sys-gen/src/: main.rs
dpdk-net-sys/include/: wrapper.h
dpdk-net-sys/src/: ffi.rs  lib.rs  wrapper.c
dpdk-net-sys/src/dpdk/: mod.rs
dpdk-net-sys/src/dpdk/eal/: mod.rs
dpdk-net-sys/src/dpdk/ethdev/: mod.rs
dpdk-net-sys/src/dpdk/launch/: mod.rs
dpdk-net-sys/src/dpdk/lcore/: mod.rs
dpdk-net-sys/src/dpdk/mbuf/: mod.rs
dpdk-net-sys/src/dpdk/mempool/: mod.rs
dpdk-net-sys/src/dpdk/thread/: mod.rs
dpdk-net-sys/src/dpdk/wrapper/: mod.rs
dpdk-net-test/: Cargo.toml  build.rs
dpdk-net-test/examples/: dpdk_tcp_server.rs
dpdk-net-test/proto/: greeter.proto
dpdk-net-test/src/: dpdk_test.rs  echo_server.rs  eth_dev_config.rs  lib.rs  tcp.rs  tcp_echo.rs  udp.rs
dpdk-net-test/src/app/: custom_http.rs  dpdk_server_runner.rs  echo_server.rs  http_server.rs  kimojio_server.rs  mod.rs
dpdk-net-test/src/manual/: echo_server.rs  mod.rs  tcp.rs  tcp_echo.rs
dpdk-net-test/tests/: app_echo_test.rs  app_udp_echo_test.rs  axum_client_test.rs  bridge_listener_test.rs  bridge_stream_test.rs  bridge_udp_test.rs  http2_echo_test.rs  http_auto_echo_test.rs  http_echo_test.rs  lcore_test.rs  manual_dpdk_vdev_test.rs  manual_tcp_echo_stress_test.rs  manual_tcp_echo_test.rs  quinn_bridge_test.rs  tcp_echo_async_test.rs  tcp_echo_stress_test.rs  tcp_echo_test.rs  tonic_bridge_test.rs  tonic_bridge_tls_test.rs  tonic_grpc_test.rs  tonic_h3_test.rs  udp_async_test.rs  udp_echo_dpdk_app_test.rs  udp_echo_test.rs
dpdk-net-tonic/: Cargo.toml
dpdk-net-tonic/src/: channel.rs  lib.rs  serve.rs
dpdk-net-tonic/src/axum/: serve.rs
dpdk-net-tonic/src/tonic/: channel.rs
dpdk-net-tonic/src/tonic/bridge/: connector.rs  incoming.rs  io.rs  mod.rs
dpdk-net-tonic/src/tonic/bridge/tls/: incoming.rs  transport.rs
dpdk-net-util/: Cargo.toml
dpdk-net-util/src/: app.rs  client.rs  connection.rs  context.rs  error.rs  executor.rs  lib.rs  pool.rs
dpdk-net-util/src/axum/: mod.rs  serve.rs
dpdk-net-util/src/bridge/: command.rs  error.rs  handle.rs  listener.rs  mod.rs  stream.rs  udp.rs  worker.rs
dpdk-net-util/src/quinn/: mod.rs  runtime.rs  socket.rs
dpdk-net-util/src/tonic/: channel.rs  mod.rs  serve.rs
dpdk-net-util/src/tonic/bridge/: connector.rs  incoming.rs  io.rs  mod.rs
dpdk-net-util/src/tonic/bridge/tls/: incoming.rs  mod.rs  transport.rs
dpdk-net/src/: lib.rs
dpdk-net/src/api/: error.rs  mod.rs
dpdk-net/src/api/rte/: eal.rs  eth.rs  lcore.rs  mbuf.rs  mod.rs  pktmbuf.rs  queue.rs
dpdk-net/src/device/: arp_cache.rs  dpdk_device.rs
dpdk-net/src/runtime/: compat_stream.rs  mod.rs  reactor.rs  tokio_compat.rs
dpdk-net/src/socket/: mod.rs  tcp.rs  udp.rs
dpdk-net/src/tcp/: arp_cache.rs  dpdk_device.rs  mod.rs
dpdk-net/src/tcp/async_net/: mod.rs  reactor.rs  runtime.rs  socket.rs  tokio_compat.rs  udp_socket.rs
dpdk-test/: README.md  VM.md
rpkt-test/src/: dpdk_device.rs  tcp.rs
tests/dpdk-bench-client/src/: main.rs  udp_client.rs
tests/dpdk-bench-server/: Cargo.toml
tests/dpdk-bench-server/src/: main.rs
tests/e2e/: README.md  generate_benchmark_report.py  inventory.py  inventory_local.py  run_all_modes.sh  run_benchmark_matrix.sh  run_tests.sh
tests/e2e/playbooks/: http_server_test.yml  setup_dpdk.yml
tests/infra/: README.md  main.bicep
tests/infra-local/: .gitignore  .terraform.lock.hcl  CMakeLists.txt  Infra.md  README.md  main.tf  outputs.tf  terraform.tfvars  variables.tf  versions.tf
tests/infra-local/scripts/: destroy-vm.sh  ssh-vm.sh  start-vm.sh
tests/infra/modules/: vm.bicep
xdp-socket-test/: Cargo.toml  xdp-af_xdp-implementation.patch
xdp-test/: Cargo.toml  README.md
xdp-test/src/: lib.rs
