[workspace]
resolver = "2"
members = [
  "dpdk-net", "dpdk-net-axum", "dpdk-net-util", "dpdk-net-sys",
  "dpdk-net-test", "dpdk-net-tonic",
  "tests/dpdk-bench-client",
  "tests/dpdk-bench-server",
]
package.edition = "2024"
package.authors = [ "youyuanwu@outlook.com" ]
package.documentation = "https://github.com/youyuanwu/rust-dpdk-net"
package.repository = "https://github.com/youyuanwu/rust-dpdk-net"
package.license = "MIT"

[workspace.dependencies]
arc-swap = "1.8"
bytes = "1"
clap = { version = "4", features = ["derive"] }
ctrlc = { version = "3", features = ["termination"] }
smoltcp = { version = "0.12", default-features = false, features = ["std", "medium-ethernet", "proto-ipv4", "socket-tcp", "socket-udp", "async"] }
arrayvec = "0.7"
serial_test = "3"
nix = { version = "0.31", features = [] }
tokio = { version = "1", default-features = false, features = [] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hyper = { version = "1", features = ["http1", "http2", "server", "client"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "service"] }
socket2 = { version = "0.6", features = ["all"] }
httparse = "1.10"
kimojio = { version = "0.14", default-features = false }

bindgen = "0.72"
cc = "1.2"
pkgconf = "0.2"

axum = { version = "0.8", default-features = false, features = [] }
tonic = { version = "0.14", default-features = false, features = ["codegen", "router"] }
tonic-prost = "0.14"
tonic-prost-build = "0.14"
prost = "0.14"
http = "1"
tower = { version = "0.5", default-features = false }

# crate in this workspace
dpdk-net = { path = "dpdk-net", version = "0.1.0" }
dpdk-net-util = { path = "dpdk-net-util", version = "0.1.0" }
dpdk-net-axum = { path = "dpdk-net-axum", version = "0.1.0" }
dpdk-net-tonic = { path = "dpdk-net-tonic", version = "0.1.0" }
dpdk-net-sys = { path = "dpdk-net-sys", version = "0.1.0" }
dpdk-net-test = { path = "dpdk-net-test" }
