[package]
name = "dpdk-net-axum"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
dpdk-net.workspace = true
smoltcp.workspace = true
tokio = { workspace = true, features = ["rt", "sync"] }
tokio-util.workspace = true
tracing.workspace = true
axum.workspace = true

[dev-dependencies]
dpdk-net-test.workspace = true
serial_test.workspace = true