[package]
name = "dpdk-net-axum"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
dpdk-net.workspace = true
dpdk-net-util.workspace = true
smoltcp.workspace = true
tokio = { workspace = true, features = ["rt", "sync", "macros"] }
tracing.workspace = true
axum.workspace = true
hyper-util.workspace = true

[dev-dependencies]
dpdk-net-util.workspace = true
dpdk-net-test.workspace = true
http-body-util.workspace = true
hyper.workspace = true
serial_test.workspace = true