[package]
name = "dpdk-net-sys-gen"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false
description = "Code generator: produces dpdk-net-sys Rust bindings from DPDK C headers"

[dependencies]
bnd-winmd = { path = "/home/user1/code/rs/bnd/bnd-winmd" }
windows-bindgen = { path = "/home/user1/code/rs/windows-rs/crates/libs/bindgen" }
pkgconf.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
