[package]
name = "dpdk-net-sys-gen"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false
description = "Code generator: produces dpdk-net-sys Rust bindings from DPDK C headers"

[dependencies]
bnd-winmd = { path = "../../bnd/bnd-winmd" }
windows-bindgen = { path = "../../windows-rs/crates/libs/bindgen"}
# bnd-winmd = { version = "0.0.5" }
# windows-bindgen = { version = "0.66" }
pkgconf.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
