[package]
name = "dpdk-net-sys"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
documentation.workspace = true
repository.workspace = true
readme = "README.md"
description = "DPDK ffi for dpdk-net"
include = ["build.rs", "include/**", "src/**", "README.md", "LICENSE"]

[dependencies]

[build-dependencies]
pkg-config.workspace = true
bindgen.workspace = true
cc.workspace = true
pkgconf.workspace = true
