[package]
name = "dpdk-net-sys"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
documentation.workspace = true
repository.workspace = true
readme = "README.md"
description = "DPDK ffi for dpdk-net"
include = ["build.rs", "include/**", "src/**", "README.md", "LICENSE"]

[dependencies]
windows-link = "0.2"

[build-dependencies]
cc.workspace = true
pkgconf.workspace = true

[features]
default = ["eal", "ethdev", "launch", "lcore", "mbuf", "mempool", "thread", "wrapper"]
Foundation = []
# generated features
eal = ["Foundation"]
ethdev = ["Foundation"]
launch = ["Foundation"]
lcore = ["Foundation"]
mbuf = ["Foundation"]
mempool = ["Foundation"]
thread = ["Foundation"]
wrapper = ["Foundation"]
