[package]
name = "dpdk-net-test"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
ctrlc.workspace = true
smoltcp.workspace = true
arrayvec.workspace = true
nix = { workspace = true, features = ["net"] }
dpdk-net.workspace = true
clap.workspace = true
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "sync", "net", "signal", "time"] }
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
hyper = { workspace = true }
http-body-util.workspace = true
hyper-util.workspace = true
socket2.workspace = true
httparse.workspace = true
kimojio.workspace = true
tonic.workspace = true
tonic-prost.workspace = true
prost.workspace = true

[build-dependencies]
tonic-prost-build.workspace = true

[dev-dependencies]
serial_test.workspace = true
dpdk-net-util.workspace = true
dpdk-net-axum.workspace = true
dpdk-net-tonic.workspace = true
http.workspace = true
