[package]
name = "dpdk-net-test"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
ctrlc.workspace = true
smoltcp.workspace = true
arrayvec.workspace = true
nix = { workspace = true, features = ["net"] }
dpdk-net.workspace = true
clap.workspace = true
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "sync", "net", "signal", "time", "io-util"] }
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
hyper = { workspace = true }
http-body-util.workspace = true
hyper-util.workspace = true
socket2.workspace = true
httparse.workspace = true
kimojio.workspace = true
tonic.workspace = true
tonic-prost.workspace = true
tonic-tls.workspace = true
prost.workspace = true

[build-dependencies]
tonic-prost-build.workspace = true

[dev-dependencies]
serial_test.workspace = true
dpdk-net-util = { workspace = true, features = ["tonic", "tonic-tls", "quinn"] }
http.workspace = true
axum.workspace = true
rcgen.workspace = true
openssl.workspace = true
quinn.workspace = true
rustls-pki-types.workspace = true
