[package]
name = "dpdk-net-util"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true

[features]
default = []
axum = ["dep:axum"]
tonic = ["dep:tonic", "dep:http", "dep:tower", "dep:futures-core", "axum"]
tonic-tls = ["tonic", "dep:tonic-tls"]

[dependencies]
arc-swap.workspace = true
bytes.workspace = true
dpdk-net.workspace = true
futures-core = { workspace = true, optional = true }
futures-io.workspace = true
smoltcp.workspace = true
hyper = { workspace = true, features = ["client", "http1", "http2"] }
hyper-util = { workspace = true, features = ["tokio", "server-auto", "service"] }
http-body-util.workspace = true
tokio = { workspace = true, features = ["rt", "sync", "macros"] }
tokio-util.workspace = true
tracing.workspace = true

# Optional: axum support
axum = { workspace = true, optional = true }

# Optional: tonic support
tonic = { workspace = true, optional = true }
http = { workspace = true, optional = true }
tower = { workspace = true, optional = true }

# Optional: tonic-tls support
tonic-tls = { workspace = true, optional = true }

[dev-dependencies]
dpdk-net-test.workspace = true
serial_test.workspace = true
tokio = { workspace = true, features = ["rt", "sync", "macros"] }
