[package]
name = "dpdk-net-util"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true

[features]
default = []
quinn = ["dep:quinn", "dep:quinn-udp"]

[dependencies]
arc-swap.workspace = true
bytes.workspace = true
dpdk-net.workspace = true
futures-io.workspace = true
smoltcp.workspace = true
hyper = { workspace = true, features = ["client", "http1", "http2"] }
hyper-util = { workspace = true, features = ["tokio", "server-auto", "service"] }
http-body-util.workspace = true
tokio = { workspace = true, features = ["rt", "sync", "macros"] }
tokio-util.workspace = true
tracing.workspace = true

# Optional: quinn support
quinn = { workspace = true, optional = true }
quinn-udp = { workspace = true, optional = true }

[dev-dependencies]
dpdk-net-test.workspace = true
serial_test.workspace = true
tokio = { workspace = true, features = ["rt", "sync", "macros"] }
