[package]
name = "dpdk-net"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
documentation.workspace = true
repository.workspace = true
description = "DPDK networking (with tokio)"
readme = "../README.md"

[features]
default = ["tokio"]
tokio = ["dep:tokio"]

[dependencies]
smoltcp.workspace = true
arrayvec.workspace = true
nix.workspace = true
tokio = { workspace = true, default-features = false,features = ["rt"], optional = true }
dpdk-net-sys.workspace = true
tracing.workspace = true
arc-swap.workspace = true
