[package]
name = "dpdk-net"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
documentation.workspace = true
repository.workspace = true
description = "DPDK networking"
readme = "../README.md"

[dependencies]
smoltcp.workspace = true
arrayvec.workspace = true
nix = { workspace = true, features = ["sched"] }
futures-io.workspace = true
dpdk-net-sys.workspace = true
tracing.workspace = true
arc-swap.workspace = true
